--- a/index.html
+++ b/index.html
@@ -11,10 +11,42 @@
 </head>
 <body>
     <div class="container">
-    <h1>
-    Hello world
-    </h1>
-    <a href="" class="btn btn-primary">Click here!</a>
+       <div class= "weather-app" >
+         <h1>
+          New York
+        </h1>
+        <ul>
+             <li>
+              Friday 05:00
+            </li>
+            <li>
+              Clear
+            </li>
+        </ul>
+             <div class="row">
+                 <div class="col-6">
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear">
+                     12 °C|°F
+                </div>
+             <div class="col-6">
+                  <ul>
+                     <li>
+                         Precipitation: 2%
+                     </li>
+                     <li>
+                         Humidity: 70%
+                     </li>
+                      <li>
+                          Wind: 5 m/s
+                     </li>
+                    </ul>
+             </div>
+            </div>
+        </div>
+        <small>
+        <a href="https://github.com/MahsaFiroozfam/Vanilla-weather-app" target="_blank">Open-source code</a> by Mahsa Firoozfam     
+        </small> 
+    </div>
     <script src="src/app.js"></script>  
     </div> 
 </body>
