--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <Link rel="stylesheet" href="src/style.css"></Link>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <Link rel="stylesheet" href="src/style.css">
+    </Link>
     <title>Weather App</title>
 </head>
 <body>
@@ -42,10 +43,11 @@
                     </ul>
              </div>
             </div>
-        </div>
-        <small>
-        <a href="https://github.com/MahsaFiroozfam/Vanilla-weather-app" target="_blank">Open-source code</a> by Mahsa Firoozfam     
-        </small> 
+            <small>
+                <a href="https://github.com/MahsaFiroozfam/Vanilla-weather-app" target="_blank">Open-source code</a> by Mahsa
+                Firoozfam
+            </small>
+        </div>     
     </div>
     <script src="src/app.js"></script>  
     </div> 
