--- a/index.html
+++ b/index.html
@@ -11,44 +11,52 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class="container">
-       <div class= "weather-app" >
-         <h1>
-          New York
-        </h1>
-        <ul>
-             <li>
-              Friday 05:00
-            </li>
-            <li>
-              Clear
-            </li>
-        </ul>
-             <div class="row">
-                 <div class="col-6">
-                    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear">
-                     12 °C|°F
-                </div>
-             <div class="col-6">
-                  <ul>
-                     <li>
-                         Precipitation: 2%
-                     </li>
-                     <li>
-                         Humidity: 70%
-                     </li>
-                      <li>
-                          Wind: 5 m/s
-                     </li>
+    <div class="weather-app-wrapper">
+        <div class="container">
+            <div class= "weather-app" >
+                <div class="overview">
+                    <h1>
+                    New York
+                    </h1>
+                    <ul>
+                        <li>
+                        Friday 05:00
+                        </li>
+                        <li>
+                        Clear
+                        </li>
                     </ul>
-             </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="clearfix weather-temperature">
+                                    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left">
+                                        
+                                            <small class="strong">12</small><span class= "units">°C|<a href="#">°F</a></span>  
+                                        
+                                </div>
+                            </div>
+                        <div class="col-6">
+                            <ul>
+                                <li>
+                                    Precipitation: 2%
+                                </li>
+                                <li>
+                                    Humidity: 70%
+                                </li>
+                                <li>
+                                    Wind: 5 m/s
+                                </li>
+                                </ul>
+                        </div>
+                        </div>
+                    </div>  
+                    <small>
+                        <a href="https://github.com/MahsaFiroozfam/Vanilla-weather-app" target="_blank">Open-source code</a> by Mahsa
+                        Firoozfam
+                    </small>
+                </div>
             </div>
-            <small>
-                <a href="https://github.com/MahsaFiroozfam/Vanilla-weather-app" target="_blank">Open-source code</a> by Mahsa
-                Firoozfam
-            </small>
-        </div>     
-    </div>
+        </div>
     <script src="src/app.js"></script>  
     </div> 
 </body>
