--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </h1>
                     <ul>
                         <li>
-                        Friday 05:00
+                        Last update : <span id="date"></span>
                         </li>
                         <li id="description">
                         
