--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div class="row">
                             <div class="col-6">
                                 <div class="clearfix weather-temperature">
-                                    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left">
+                                    <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left" id= "icon">
                                         
                                             <small class="strong" id="temperature"></small><span class= "units">°C|<a href="#">°F</a></span>  
                                         
