--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <div class="clearfix weather-temperature">
                                     <img src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png" alt="Clear" class="float-left" id= "icon">
                                         
-                                            <small class="strong" id="temperature"></small><span class= "units">°C|<a href="#">°F</a></span>  
+                                            <small class="strong" id="temperature"></small><span class= "units"><a href ="#" id = "celsius-link"class = "active">°C</a>|<a href="#" id="fahrenheit-link" >°F</a></span>  
                                         
                                 </div>
                             </div>
