Added the forecast HTML and CSS

--- a/index.html
+++ b/index.html
@@ -46,19 +46,31 @@
                                         
                                 </div>
                             </div>
-                        <div class="col-6">
-                            <ul>
-                                <li id="feels-like">
-                                    Feels like: 10°
-                                </li>
-                                <li id="humidity">
-                                    Humidity: 70%
-                                </li>
-                                <li id="wind">
-                                    Wind: 5 m/s
-                                </li>
-                                </ul>
-                        </div>
+                            <div class="col-6">
+                                <ul>
+                                    <li id="feels-like">
+                                        Feels like: 10°
+                                    </li>
+                                    <li id="humidity">
+                                        Humidity: 70%
+                                    </li>
+                                    <li id="wind">
+                                        Wind: 5 m/s
+                                    </li>
+                                    </ul>
+                            </div>
+                                <div class = "weahter-forcast">
+                                    <div class="col-2">
+                                        <div class="weahter-forcast-date">
+                                            Thu
+                                        </div>
+                                        <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="" width= 70>
+                                        <div class="weather-forcast-temperature">
+                                            <span class= "weather-forcast-max"> 18° </span>
+                                            <span class= "weather-forcast-min"> 10° </span>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>  
                     <small>
