Add JS for weather forecast

--- a/index.html
+++ b/index.html
@@ -59,17 +59,7 @@
                                     </li>
                                     </ul>
                             </div>
-                                <div class = "weahter-forcast">
-                                    <div class="col-2">
-                                        <div class="weahter-forcast-date">
-                                            Thu
-                                        </div>
-                                        <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="" width= 70>
-                                        <div class="weather-forcast-temperature">
-                                            <span class= "weather-forcast-max"> 18° </span>
-                                            <span class= "weather-forcast-min"> 10° </span>
-                                        </div>
-                                    </div>
+                                <div class = "weahter-forcast" id= "forecast">
                                 </div>
                         </div>
                     </div>  
