--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class="weather-app-wrapper">
+    <div class="weather-app-wrapper" >
         <div class="container">
-            <div class= "weather-app" >
+            <div class= "weather-app" id = "imgtest" >
                 <form id="search-form" class="mb-3">
                     <div class="row">
                         <div class=col-9>
@@ -62,12 +62,12 @@
                                 <div class = "weahter-forcast" id= "forecast">
                                 </div>
                         </div>
-                    </div>  
-                    <small>
+                    </div>    
+                </div>
+                <small>
                         <a href="https://github.com/MahsaFiroozfam/Vanilla-weather-app" target="_blank">Open-source code</a> by Mahsa
                         Firoozfam
-                    </small>
-                </div>
+                </small>
             </div>
         </div>
     <script src="src/app.js"></script>  
